--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 group 'com.carpecosmos'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.11
 
 repositories {
     mavenCentral()
@@ -15,5 +15,16 @@ dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.junit.platform', name: 'junit-platform-surefire-provider', version: '1.3.2'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.10'
+
 }
+
+test {
+    useJUnitPlatform()
+}
+
+
