--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
 
     testCompile group: 'org.junit.platform', name: 'junit-platform-surefire-provider', version: '1.3.2'
+    testCompile 'org.junit.jupiter:junit-jupiter-params:5.4.2'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
